.metadata/.plugins/org.eclipse.cdt.ui/Assignment2.build.log
12:49:46 **** Incremental Build of configuration Debug for project Assignment2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assignment2.o" "..\\src\\Assignment2.c" 
..\src\Assignment2.c: In function 'main':
..\src\Assignment2.c:21:6: error: expected '(' before 'else'
  }if else(mark<80){
      ^~~~
      (

12:49:47 Build Failed. 1 errors, 0 warnings. (took 339ms)

